# note-section-test

./: CMakeLists.txt  go.sh
inspector/: CMakeLists.txt
inspector/src/: main.cpp
module/: CMakeLists.txt
module/src/: note_section.ld  note_section.lds  thing.cpp
